--- a/trial1/style.css
+++ b/trial1/style.css
@@ -1,6 +1,3 @@
-* {
-  box-sizing: border-box;
-}
 
 body {
   margin: 0;
@@ -10,29 +7,42 @@ body {
 
 #myVideo {
   position: fixed;
+	top: 0;
+	left: 0;	
   right: 0;
   bottom: 0;
-  min-width: 100%; 
-  min-height: 100%;
+	z-index: -1;
+
 }
 
 .content {
   position: fixed;
-  // bottom: 0;
+	padding: 10px;
   background: rgba(0, 0, 0, 0.5);
   color: #f1f1f1;
   width: 100%;
-  padding: 10px;
+
+}
+
+#toggleer {
+	color: white;
+}
+
+#tamburo{
+	position: fixed;
+	top:100px;
+	
 }
 
 
-
 ul{
+	color: white;
     margin: 0;
     padding: 0;
     list-style-type: none;
     overflow: hidden;
 }
+
 
 li {
     float: left;
@@ -51,3 +61,5 @@ li a:hover{
     text-decoration: none;
     color: white;
 }
+
+
